@@ -204,6 +204,7 @@ class cfgFunctions {
 			addc(canu);
 			addc(tasks);
 			addc(updatemove);
+			addc(chopcheck);
 		};
 		class Dom_UI {
 			file = "clientui";
