@@ -177,7 +177,9 @@ if (_rtype == 0) then { // player died
 	if (!d_with_ai) then {
 		enableSentences false;
 	};
-	[player , "NoVoice"] remoteExecCall ["setSpeaker", -2, false];
+	if (speaker player != "NoVoice") then {
+		[player , "NoVoice"] remoteExecCall ["setSpeaker", -2, false];
+	};
 
 	showChat true;
 	if (isStreamFriendlyUIEnabled || {d_force_isstreamfriendlyui == 1}) then {
